--- a/index.html
+++ b/index.html
@@ -4,97 +4,13 @@
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <script type="module" src="jsx-file.js"></script>
-</head>
-<body id="body">
+ </head>
+<body>
 <!-------------header----------------->
 
-<div id="root"></div>
-
-<!--        -->
-<main>
-<!--        -->
-<div id="amroot"></div>
-<!--        -->
-<div id="edu">
- <div class="container">
-  <h2 id="h2edu">My Education</h2>
-  </div>
- <div class="container">
-<p id="pedu">Ive graduated from Alta High School in Sandy,UT in the year 2012. I went on to study at Brigham Young University in Provo, Ut. </p>
-</div>
-</div>
-<!--        -->
-<div id="ex">
-<div class="container">
-  <h2  id="h2ex">My Experience </h2>
-  </div>
- <div class="container">
-<p id="pex">I've been a Master Fire Alarm Technician, a Customer Service Representative and a Seafood Processor. </p>
-</div>
-</div>
-<!--        -->
-<div id="co" class="co">
-<div class="container">
-  <h2 id="h2co">My Competencies</h2>
-  </div>
-<img src="" alt="html" class="co" id="htmlco" >
-  <img src="" alt="css" class="co" id="cssco" >
-  <img src="" alt="javascript" class="co" id="jsco" >
-  <img src="" alt="sql" class="co"id="sqlco" >
-<img src="" alt="python" class="co"id="pythonco" >
-<img src="" alt="json" class="co" id="jsonco" >
-<img src="" alt="c#" class="co" id="csharpco" >
-<img src="" alt="c++" class="co" id="cppco" >
-<img src=""alt="git" class="co" id="gitco" >
-<img src=""alt="react" class="co" id="reactco" >
-<img src=""alt="github" class="co" id="githubco" >
-</div>
-	<!--        -->
-<div id="ce" class="ce">
-<div  class="container">
-<h2 id="h2ce">My Certification</h2>
-</div>
-<div class="cechild" ><iframe class="d" src="HTML certification .pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" ><iframe class="d" src="JavaScriptcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" ><iframe class="d" src="SQLcertificate.pdf" width="600px" height="850px"></iframe></div>
-<div class="cechild" width="100%" height="850px"><a href="https://api2.sololearn.com/v2/certificates/CC-U4L6ZJBX/image/jpg" width="100%" height="850px">
-<img src="65C8A70C-95F7-453D-8221-F6040F565406.jpeg" alt="sololearnhtmlcertificate" width="100%" height="850px" class="ce">
-</a></div>
-</div>
-<!--        -->
-</main>
-<footer id="footer">
-<!--        -->
-<div class="container">
-<h3 id="h3con">Contact Me</h3>
-</div>
-<p id="pem">sem2093@gmail.com</p>
-<p id="pp">937-474-9664</p>
-<!--        -->
-<div class="container">
-<h3 id="h3f">Follow Me</h3>
-</div>
-<div id="f" class="f">
-<a href="https://www.twitter.com/@sem2093" class="d">
-  <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" class="e" alt="Twitter"style="width: 100px; height: 100px;">
-</a>
-<a href="https://www.instagram.com/@sem209378" class="d">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" class="e" alt="Instagram"style="width: 100px; height: 100px;">
-			</a>
-	<a href="https://m.facebook.com/profile.php?id=100008629298322" class="d">
- <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" class="e" alt="Facebook"style="width: 100px; height: 100px;">
-	</a>
-</div>
-<!--        -->
-<p id="pc">&copy; Steven Miller 2023 All rights reserved</p>
-</footer>
-<script src="script.js"defer></script>
+<div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/babel.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/preset-react.min.js"></script>
-<!--
-<script src="CDN/library"></script>
-ex= <script src"https://teach.gemimo.com/bouncy.js"></script>
- -->
+<script src="jsx-file.js"></script>
 </body>
 </html>
