--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <!-------------header----------------->
 
 <div id="app"></div>
-<script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/babel.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.14.7/preset-react.min.js"></script>
+<script src="babel.js"></script>
+<script src="babel.min.js"></script>
 <script src="jsx-file.js"></script>
 </body>
 </html>
