--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
   </head>
 <body>
 <!-------------header--------------->
-<div id="app"></div>
+<div id="output"></div>
+<!-- Load Babel -->
 <script src="babel.js"></script>
 <script src="babel.min.js"></script>
-<script src="jsx-file.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<!-- Your custom script here -->
+<script src="jsx-file.js" type="text/jsx"></script>
+<script type="text/babel">
+const getMessage = () => "Hello World";
+document.getElementById('output').innerHTML = getMessage();
+</script>
+
+
 </body>
 </html>
