--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <!-------------header--------------->
 <div id="output"></div>
+<div id="op2"></div>
 <!-- Load Babel -->
 <script src="babel.js"></script>
 <script src="babel.min.js"></script>
