--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 <body>
 <!-------------header--------------->
+<div id="app"></div>
 <div id="output"></div>
 <div id="op2"></div>
 <!-- Load Babel -->
