--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <div id="output"></div>
 <div id="op2"></div>
 <!-- Load Babel -->
-<script src="babel.js"></script>
 <script src="babel.min.js"></script>
+ <script src="react.min.js"></script>
+ <script src="react-dom.min.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <!-- Your custom script here -->
 <script src="jsx-file.js" type="text/babel"></script>
