--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div id="app"></div>
 <div id="output"></div>
 <div id="op2"></div>
+<div id="root"></div>
 <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
