--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="output"></div>
 <div id="op2"></div>
 <div id="root"></div>
+<div id="rootedu"></div>
 <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
