--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div id="op2"></div>
 <div id="root"></div>
 <div id="rootedu"></div>
+<div id="rootex"></div>
 <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
