--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
 <body>
 <!-------------header--------------->
-<div id="app"></div>
-<div id="output"></div>
-<div id="root"></div>
+<div id="header"></div>
+<div id="main"></div>
+<div id="footer"></div>
 <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
