--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="header"></div>
   <div>
-  <img src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png">
+  <img src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png" id="logo">
 </div>
 <div id="main"></div>
 <div id="footer"></div>
