--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
-<!-------------header--------------->
+<!-------------Header--------------->
 
 <div id="header"></div>
   <div>
   <img src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png" id="logo">
 </div>
+<!-------------Main--------------->
 <div id="main"></div>
+<!-------------Footer--------------->
 <div id="footer"></div>
-<!-- Load Babel -->
+ <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
+  <img id="nw"src="https://www.freepnglogos.com/uploads/linkedin-basic-round-social-logo-png-13.png"> 
+  </a>
+  <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
  <script src="react-dom.min.js"></script>
