--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
   <img id="nw"src="https://www.freepnglogos.com/uploads/linkedin-basic-round-social-logo-png-13.png"> 
   </a>
+  <p>Copyright &copy; Steve Miller 2023. </p>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
