--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <!-- Your custom script here -->
 <script src="jsx-file.js" type="text/babel"></script>
+<script src="script.js"></script>
 </body>
 </html>
