--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </div>
 <!-------------Main--------------->
 <div id="main"></div>
+<img id="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
 <!-------------Footer--------------->
 <div id="footer"></div>
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
