--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <!-------------Main--------------->
 <div id="main"></div>
 <div>
-<img id="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
+<img class="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
+</div>
+<div>
+<img class="imgcert" src="https://blob.sololearn.com/certificates/8c6b1f4c-9950-4b84-b7f2-26faa55553a4.pdf">
 </div>
 <!-------------Footer--------------->
 <div id="footer"></div>
