--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <div>
 <img class="imgcert" src="https://blob.sololearn.com/certificates/8c6b1f4c-9950-4b84-b7f2-26faa55553a4.pdf">
 </div>
+<div>
+<img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-B4OTQTJA/image/jpg">
+</div>
 <!-------------Footer--------------->
 <div id="footer"></div>
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
