--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-B4OTQTJA/image/jpg">
 </div>
+<div>
+<img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-PH4HNZ4F/image/jpg">
+</div>
 <!-------------Footer--------------->
 <div id="footer"></div>
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
