--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 </div>
 <!-------------Main--------------->
 <div id="main"></div>
+   
 <div>
 <img class="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
 </div>
+<iframe src="JavaScriptcertificate.pdf"></iframe>      
 <div>
 <img class="imgcert" src="https://blob.sololearn.com/certificates/8c6b1f4c-9950-4b84-b7f2-26faa55553a4.pdf">
 </div>
+<iframe src="SQLcertificate.pdf"></iframe>
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-B4OTQTJA/image/jpg">
 </div>
+<iframe src="HTML certification .pdf"></iframe>
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-PH4HNZ4F/image/jpg">
 </div>
