--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <!-------------Main--------------->
 <div id="main"></div>
-   
+<div>
 <div>
 <img class="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
 </div>
@@ -28,6 +28,7 @@
 <iframe src="HTML certification .pdf"></iframe>
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-PH4HNZ4F/image/jpg">
+</div>
 </div>
 <!-------------Footer--------------->
 <div id="footer"></div>
