--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <!-------------Header--------------->
 
 <div id="header"></div>
+  <img id="cloudone" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
   <div>
-  <img src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png" id="logo">
+  <img  src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png" id="logo">
 </div>
 <!-------------Main--------------->
 <div id="main"></div>
+  <img id="cloudtwo" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-YCGHU9VY/image/jpg">
 <div>
@@ -30,12 +32,14 @@
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-PH4HNZ4F/image/jpg">
 </div>
+  <img id="cloudthree" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
 </div>
 <!-------------Footer--------------->
 <div id="footer"></div>
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
   <img id="nw"src="https://www.freepnglogos.com/uploads/linkedin-basic-round-social-logo-png-13.png"> 
   </a>
+  <img id="cloudfour" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
   <p>Copyright &copy; Steve Miller 2023. </p>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
