--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html> 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width" />
 <title>Steven Miller</title>
   <link rel="stylesheet" href="styles.css" />
   </head>
