--- a/index.html
+++ b/index.html
@@ -7,47 +7,47 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
-  <img id="cloudfive" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloudfive" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
 <!-------------Header--------------->
 
 <div id="header"></div>
-  <img id="cloudone" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloudone" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
   <div>
   <img  src="C64EFC3C-ACBA-4CB6-BC6F-4D4D34F6236C.png" id="logo">
 </div>
- <img id="cloudsix" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+ <img class="cloud" id="cloudsix" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
 <!-------------Main--------------->
 <div id="main"></div>
-  <img id="cloudtwo" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloudtwo" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-YCGHU9VY/image/jpg">
 <div>
-   <img id="cloudseven" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+   <img class="cloud" id="cloudseven" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
 <img class="imgcert" src="F6ECF6AD-1B82-4496-B55C-2BA7A1A69186.jpeg">
 </div>
 <iframe src="JavaScriptcertificate.pdf"></iframe>      
 <div>
-   <img id="cloudeight" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+   <img class="cloud" id="cloudeight" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
 <img class="imgcert" src="https://blob.sololearn.com/certificates/8c6b1f4c-9950-4b84-b7f2-26faa55553a4.pdf">
 </div>
 <iframe src="SQLcertificate.pdf"></iframe>
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-B4OTQTJA/image/jpg">
 </div>
- <img id="cloudnine" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+ <img class="cloud" id="cloudnine" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
 <iframe src="HTML certification .pdf"></iframe>
 <div>
 <img class="imgcert" src="https://api2.sololearn.com/v2/certificates/CC-PH4HNZ4F/image/jpg">
 </div>
-  <img id="cloudthree" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloudthree" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
 </div>
 <!-------------Footer--------------->
 <div id="footer"></div>
- <img id="cloudten" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+ <img class="cloud" id="cloudten" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
  <a href="https://www.linkedin.com/in/steven-miller-b60a10281?trk=contact-info">
   <img id="nw"src="https://www.freepnglogos.com/uploads/linkedin-basic-round-social-logo-png-13.png"> 
   </a>
-  <img id="cloudfour" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloudfour" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
   <p>Copyright &copy; Steve Miller 2023. </p>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
