--- a/index.html
+++ b/index.html
@@ -27,7 +27,26 @@
     <img class="cloud" id="cloudnineteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
  <img class="cloud" id="cloudten" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
   <img class="cloud" id="cloudfour" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <p>Copyright &copy; Steve Miller 2023. </p>
+   <img class="cloud" id="cloud21" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud22" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud23" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud24" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud25" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud26" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud27" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+ <img class="cloud" id="cloud28" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+ <img class="cloud" id="cloud29" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+<img class="cloud" id="cloud30" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
+  <img class="cloud" id="cloud31" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloud32" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloud33" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloud34" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloud35" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
+  <img class="cloud" id="cloud36" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+ <img class="cloud" id="cloud37" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud38" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud39" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud40" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
