--- a/index.html
+++ b/index.html
@@ -7,46 +7,23 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
-      <img class="cloud" id="cloudfifteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-  <img class="cloud" id="cloudfive" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloudone" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-        <img class="cloud" id="cloudsixteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-    <img class="cloud" id="cloudfourteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
- <img class="cloud" id="cloudsix" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloudtwo" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-        <img class="cloud" id="cloudeighteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-   <img class="cloud" id="cloudseven" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-    <img class="cloud" id="cloudeleven" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-      <img class="cloud" id="cloudseventeen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-   <img class="cloud" id="cloudeight" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-    <img class="cloud" id="cloudtwelve" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
- <img class="cloud" id="cloudnine" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-    <img class="cloud" id="cloudthirteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-    <img class="cloud" id="cloudtwenty" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-  <img class="cloud" id="cloudthree" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-    <img class="cloud" id="cloudnineteen" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
- <img class="cloud" id="cloudten" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloudfour" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-   <img class="cloud" id="cloud21" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud22" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud23" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud24" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud25" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud26" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud27" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
- <img class="cloud" id="cloud28" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
- <img class="cloud" id="cloud29" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-<img class="cloud" id="cloud30" src="8451B768-B3FB-48D7-BFC6-268AF762CB39.png">
-  <img class="cloud" id="cloud31" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloud32" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloud33" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloud34" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloud35" src="8CA47832-788F-449D-B158-F9253CF1B1FB.png">
-  <img class="cloud" id="cloud36" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
- <img class="cloud" id="cloud37" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-  <img class="cloud" id="cloud38" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-  <img class="cloud" id="cloud39" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
-  <img class="cloud" id="cloud40" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  
+  <!------------clouds-------------->
+      <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+        <img class="cloud" id="cloud2" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud3" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+        <img class="cloud" id="cloud4" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud5" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+      <img class="cloud" id="cloud6" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud7" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud8" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud9" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+    <img class="cloud" id="cloud10" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud11" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+ <img class="cloud" id="cloud12" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud13" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud14" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  <img class="cloud" id="cloud15" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
