--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
 <body>
   <!-------------certificates-------------->
-  <img src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
-  <img src="EC3752E2-EDDF-4F19-B4C9-AAF3F024A91B.jpeg">
-  <img src="E8ABB871-03CE-4284-8D20-50B2FC0D3E71.jpeg">
-  <img src="C1454064-20BE-4D52-98C6-DB8C695336BF.jpeg">
-  <img src="B0DC6A77-E0D4-49E1-9417-483EE10583E8.jpeg">
-  <img src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
-  <img src="8921CEF3-3C1F-4D1C-9038-F62B3D9368BA.jpeg">
-  <img src="74295C28-7B4C-4B29-AFDB-4E1A5205ABE5.jpeg">
-  <img src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
-  <img src="14D8BB1D-73EE-413B-BE7D-9A04A0E26151.jpeg">
+  <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
+  <img class="cert" src="EC3752E2-EDDF-4F19-B4C9-AAF3F024A91B.jpeg">
+  <img class="cert" src="E8ABB871-03CE-4284-8D20-50B2FC0D3E71.jpeg">
+  <img class="cert" src="C1454064-20BE-4D52-98C6-DB8C695336BF.jpeg">
+  <img class="cert" src="B0DC6A77-E0D4-49E1-9417-483EE10583E8.jpeg">
+  <img class="cert" src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
+  <img class="cert" src="8921CEF3-3C1F-4D1C-9038-F62B3D9368BA.jpeg">
+  <img class="cert" src="74295C28-7B4C-4B29-AFDB-4E1A5205ABE5.jpeg">
+  <img class="cert" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
+  <img class="cert" src="14D8BB1D-73EE-413B-BE7D-9A04A0E26151.jpeg">
   
   <!------------clouds-------------->
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
