--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 <body>
   <!-------------certificates-------------->
+  <div id="certcon">
   <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
   <img class="cert" src="EC3752E2-EDDF-4F19-B4C9-AAF3F024A91B.jpeg">
   <img class="cert" src="E8ABB871-03CE-4284-8D20-50B2FC0D3E71.jpeg">
@@ -18,8 +19,9 @@
   <img class="cert" src="74295C28-7B4C-4B29-AFDB-4E1A5205ABE5.jpeg">
   <img class="cert" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
   <img class="cert" src="14D8BB1D-73EE-413B-BE7D-9A04A0E26151.jpeg">
-  
+  </div>
   <!------------clouds-------------->
+  <div id="cloudcon">
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
         <img class="cloud" id="cloud2" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
     <img class="cloud" id="cloud3" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
@@ -35,6 +37,7 @@
   <img class="cloud" id="cloud13" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <img class="cloud" id="cloud14" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <img class="cloud" id="cloud15" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
+  </div>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
