--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <img class="cert" src="E8ABB871-03CE-4284-8D20-50B2FC0D3E71.jpeg">
   <img class="cert" src="C1454064-20BE-4D52-98C6-DB8C695336BF.jpeg">
   <img class="cert" src="B0DC6A77-E0D4-49E1-9417-483EE10583E8.jpeg">
-  <img class="cert" src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
-  <img class="cert" src="8921CEF3-3C1F-4D1C-9038-F62B3D9368BA.jpeg">
-  <img class="cert" src="74295C28-7B4C-4B29-AFDB-4E1A5205ABE5.jpeg">
-  <img class="cert" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
   <img class="cert" src="14D8BB1D-73EE-413B-BE7D-9A04A0E26151.jpeg">
+  <img class="cert" src="8921CEF3-3C1F-4D1C-9038-F62B3D9368BA.jpeg">
+  <img class="certtall" src="74295C28-7B4C-4B29-AFDB-4E1A5205ABE5.jpeg">
+  <img class="certtall" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
+  <img class="certtall" src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
   </div>
   <!------------clouds-------------->
   <div id="cloudcon">
