--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
+  <header>
+    <h1> Hi!</h1>
+    <p>I'm Steven Miller and I'm a full-stack developer.</p>
+  </header>
   <!-------------certificates-------------->
-  <div id="certcon">
+ <div id="certcon">
   <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
   <img class="cert" src="EC3752E2-EDDF-4F19-B4C9-AAF3F024A91B.jpeg">
   <img class="cert" src="E8ABB871-03CE-4284-8D20-50B2FC0D3E71.jpeg">
