--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
+  <!-------header---------->
+  <div id="headercon">
   <header>
     <h1> Hi!</h1>
     <p>I'm Steven Miller and I'm a full-stack developer.</p>
   </header>
+  </div>
   <!-------------certificates-------------->
  <div id="certcon">
   <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
