--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1> Hi!</h1>
     <p>I'm Steven Miller and I'm a full-stack developer.</p>
   </header>
+  <div id=filler></div>
   </div>
   <!------------clouds-------------->
   <div id="cloudcon">
