--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
   <img class="certtall" src="55859D08-9C8A-42E1-89EB-ADC04DE79EBD.jpeg">
   <img class="certtall" src="AFB8402C-FB82-4072-88B7-F3A418A36D21.jpeg">
   </div>
+  <div id="footercon">
+    <footer>
+      <p>Email: sem2093@gmail.com</p>
+      <p>Phone: 937-474-9664</p>
+      <p> &copy; 2023 Steven Miller. All rights reserved.</p>
+    </footer>
+</div>
   
   
   <!-- Load Babel -->
