--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <img class="cloud" id="cloud14" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <img class="cloud" id="cloud15" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   </div>
+  <main>
   <!-------------certificates-------------->
  <div id="certcon">
   <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
@@ -51,6 +52,7 @@
   <p>Email: sem2093@gmail.com</p>
       <p>Phone: 937-474-9664</p>
   </div>
+  </main>
   <div id="footercon">
     <footer>
       <p>Email: sem2093@gmail.com</p>
