--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h1> Hi!</h1>
     <p>I'm Steven Miller and I'm a full-stack developer.</p>
   </header>
-  <div id=filler></div>
   </div>
+  <main>
+    <div class="filler"></div>
   <!------------clouds-------------->
   <div id="cloudcon">
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
@@ -33,7 +34,7 @@
   <img class="cloud" id="cloud14" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   <img class="cloud" id="cloud15" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
   </div>
-  <main>
+  
   <!-------------certificates-------------->
  <div id="certcon">
   <img class="cert" src="FAE7D219-A2B5-4F9F-BADF-C75389878C56.jpeg">
@@ -52,6 +53,7 @@
   <p>Email: sem2093@gmail.com</p>
       <p>Phone: 937-474-9664</p>
   </div>
+  <div class="filler"></div>
   </main>
   <div id="footercon">
     <footer>
