--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </div>
   <main>
     <div class="filler"></div>
+    <a href="#certcon" class="toggle-button">Certificates</a>
+    
   <!------------clouds-------------->
   <div id="cloudcon">
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
