--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <main>
     <div class="filler"></div>
     <a href="#certcon" class="toggle-button">Certificates</a>
+    <a href="#concon" class="toggle-button">Contact</a>
     
   <!------------clouds-------------->
   <div id="cloudcon">
