--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </div>
   <main>
     <div class="filler"></div>
-    <a href="#certcon" class="toggle-button">Certificates</a>
-    <a href="#concon" class="toggle-button">Contact</a>
+    <a href="#certcon" id="acert" class="toggle-button">Certificates</a>
+    <a href="#concon" id="acon" class="toggle-button">Contact</a>
     
   <!------------clouds-------------->
   <div id="cloudcon">
