--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
   <header>
     <h1> Hi!</h1>
     <p>I'm Steven Miller and I'm a full-stack developer.</p>
+    <nav>
+    <ul>
+    <li><a href="#certcon" id="acert" class="toggle-button">Certificates</a></li>
+    <li><a href="#concon" id="acon" class="toggle-button">Contact</a></li>
+    </ul>
+    </nav>
   </header>
   </div>
   <main>
     <div class="filler"></div>
-    <a href="#certcon" id="acert" class="toggle-button">Certificates</a>
-    <a href="#concon" id="acon" class="toggle-button">Contact</a>
-    
   <!------------clouds-------------->
   <div id="cloudcon">
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
