--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
   <header>
     <nav>
     <ul>
+    <li><a href="#aboutcon" id="aabout" class="toggle-button">About</a></li>
     <li><a href="#certcon" id="acert" class="toggle-button">Certificates</a></li>
     <li><a href="#concon" id="acon" class="toggle-button">Contact</a></li>
+   
     </ul>
     </nav>
   </header>
   </div>
   <main>
     <div class="filler"></div>
+    
+    <div id="aboutcon">
+      <p> Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
+    </div>
   <!------------clouds-------------->
   <div id="cloudcon">
       <img class="cloud" id="cloud1" src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png">
