--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
+<code>
   <!-------header---------->
   <div id="headercon">
   <header>
@@ -70,7 +71,7 @@
     </footer>
 </div>
   
-  
+  </code>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
