--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
   <main>
     <div class="filler"></div>
-    
+    <div id="quote-container"></div>
     <div id="aboutcon">
       <p> Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
     </div>
