--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
   <main>
     <div class="filler"></div>
     <div id="quote-container"></div>
+    <div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
     <div id="aboutcon">
       <p> Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
     </div>
