--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
-<code>
   <!-------header---------->
   <div id="headercon">
   <header>
@@ -22,7 +21,6 @@
   </header>
   </div>
   <main>
-    <div class="filler"></div>
     <div id="quote-container"></div>
     <div class="container">
 <div class="box"></div>
@@ -69,15 +67,37 @@
   <p>Email: sem2093@gmail.com</p>
       <p>Phone: 937-474-9664</p>
   </div>
-  <div class="filler"></div>
+    <div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
+<div class="container">
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+</div>
   </main>
   <div id="footercon">
     <footer>
       <p> &copy; 2023 Steven Miller. All rights reserved.</p>
     </footer>
 </div>
-  
-  </code>
   <!-- Load Babel -->
 <script src="babel.min.js"></script>
  <script src="react.min.js"></script>
