--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <div id="headercon">
   <header>
     <nav>
-    <ul>
-    <li><a href="#aboutcon" id="aabout" class="toggle-button">About</a></li>
-    <li><a href="#certcon" id="acert" class="toggle-button">Certificates</a></li>
-    <li><a href="#concon" id="acon" class="toggle-button">Contact</a></li>
+    
+    <a href="#aboutcon" id="aabout" class="toggle-button">About</a>
+   <a href="#certcon" id="acert" class="toggle-button">Certificates</a>
+    <a href="#concon" id="acon" class="toggle-button">Contact</a>
   
-    </ul>
+    
     </nav>
   </header>
   </div>
