--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="box"></div>
 </div>
     <div id="aboutcon">
-      <p> Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
+      <p class="about" >Hi!, my names Steven Everett Miller II and I'm a full-stack developer. I'm primarily self-taught but have utilized many different learning tools. I graduated from Alta High School in Sandy, UT in 2012 and studied at Brigham Young University in Provo, UT.</p>
     </div>
   <!-------------certificates-------------->
  <div id="certcon">
